# vla0

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  init.sh
eval/: eval_lenewton.py  eval_libero_all.py  eval_openarmlab.py
libs/RoboVerse/: setup.py
libs/RoboVerse/roboverse/configs/: img_libero_aug.yaml
libs/RoboVerse/roboverse/datasets/lerobot/: dataloader.py
libs/RoboVerse/roboverse/evals/libero/: eval.py
libs/RoboVerse/roboverse/evals/openarmlab/: eval.py
rv_train/: configs.py  train_unsloth.py
rv_train/models/qwen/: model.py
